--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.jpa.show-sql=true
+# Database
+spring.datasource.url=jdbc:mariadb://localhost:3306/cardb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
 
+# LOGGER
+logging.level.root=INFO
+# TOMCAT PORT
+server.port=8089
+
+spring.data.rest.basePath=/api/projet1
